--- a/portifolio.html
+++ b/portifolio.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Desenvolverdor Front End & UX/UI Designer. Localizado em Fortaleza-Ceará">
   <title>Portifolio</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.min.css">
 </head>
 <body>
   <header class="header">
