--- a/portifolio.html
+++ b/portifolio.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Desenvolverdor Front End & UX/UI Designer. Localizado em Fortaleza-Ceará">
   <title>Portifolio</title>
   <link rel="stylesheet" href="style.min.css">
+  <link rel="icon" href="img/Sem_título-removebg-preview (1).png" type="image/pnj">
 </head>
 <body>
   <header class="header">
